docs/7.57/md/abenabap_objects_oview.md
---
title: "ABAP Objects - Overview"
description: |
  ABAP Objects is the object-oriented part of ABAP. ABAP Objects adds a complete set of language elements(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobjects_keywords.htm) to ABAP, which was previously only a procedural language, that allow object-oriented programming(https://he
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_oview.htm"
abapFile: "abenabap_objects_oview.htm"
keywords: ["do", "if", "method", "class", "data", "abenabap", "objects", "oview"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_declarations.htm) →  [Classes and Interfaces (ABAP Objects)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclasses_and_interfaces.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Objects - Overview, ABENABAP_OBJECTS_OVIEW, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion for improvement:)

ABAP Objects - Overview

ABAP Objects is the object-oriented part of ABAP.

ABAP Objects adds a complete set of [language elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobjects_keywords.htm) to ABAP, which was previously only a procedural language, that allow [object-oriented programming](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobject_orientation.htm). This object-oriented extension of ABAP is based on the previous languages scope and is largely compatible with them. ABAP Objects can be used in existing programs, and the [statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_statements.htm) that can be used in ABAP Objects correspond to almost all of the remaining ABAP language scope, although certain [obsolete language elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_strict.htm) are not allowed in the context of ABAP Objects due to a previous cleanup of the ABAP language.

ABAP Objects supports:

-   [Classes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclasses.htm)
-   [Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninterfac.htm)
-   [Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobject.htm)
-   [Object references](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreferences.htm)
-   [inheritance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninheritance.htm)

Hint

The package SABAP\_DEMOS\_CAR\_RENTAL contains a complete example application written in ABAP Objects, whose presentation logic is realized by a dynpro or Web Dynpro. The Web Dynpro calls interface methods that are implemented in a class and that access classes that perform database accesses.

Executable Example

[Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_abexa.htm)

Continue
[ABAP Objects - Object Orientation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobject_orientation.htm)
[ABAP Objects - Definition of Classes and Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_interface_definition.htm)
[ABAP Objects - Classes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclasses.htm)
[ABAP Objects - Inheritance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninheritance.htm)
[ABAP Objects - Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninterfac.htm)
[ABAP Objects - Events](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenevents_overview.htm)
[ABAP Objects - Friends, Friendship Between Classes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfriends.htm)
[ABAP Objects - Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobject.htm)
[ABAP Objects - Statements in ABAP Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_statements.htm)
[ABAP Objects - Examples](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_abexas.htm)